microservices-gke/k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: gcr.io/my-gke-microservices/order-service:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
