microservices-gke/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: gcr.io/my-gke-microservices/user-service:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
